--- a/grafana/provisioning/datasources/datasources.yml
+++ b/grafana/provisioning/datasources/datasources.yml
@@ -7,3 +7,9 @@ datasources:
     url: http://prometheus.railway.internal:9090
     isDefault: true
     editable: false
+  - name: Infinity
+    type: yesoreyeram-infinity-datasource
+    uid: infinity
+    access: proxy
+    isDefault: false
+    editable: false
