--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -6,4 +6,4 @@ scrape_configs:
   - job_name: 'polymarket-tracker'
     static_configs:
       - targets: ['tracker.railway.internal:9092']
-    metrics_path: /metrics
+    metrics_path: /prometheus
