--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -5,5 +5,6 @@ global:
 scrape_configs:
   - job_name: 'polymarket-tracker'
     static_configs:
-      - targets: ['tracker.railway.internal:9092']
+      - targets: ['tracker-production-e81d.up.railway.app']
+    scheme: https
     metrics_path: /prometheus
