--- a/grafana/provisioning/datasources/datasources.yml
+++ b/grafana/provisioning/datasources/datasources.yml
@@ -5,7 +5,7 @@ datasources:
     type: prometheus
     uid: prometheus
     access: proxy
-    url: http://prometheus.railway.internal:9090
+    url: https://prometheus-production-0063.up.railway.app
     isDefault: true
     editable: false
   - name: Infinity
